# docs/swagger.yaml
@@ -1,5 +1,21 @@
-basePath: /
 definitions:
+  tasks.Task:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      text:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/users.User'
+      user_id:
+        type: integer
+    type: object
   users.User:
     properties:
       created_at:
@@ -14,7 +30,6 @@ definitions:
         type: string
       role:
         $ref: '#/definitions/users.UserRole'
-        type: object
       updated_at:
         type: string
       username:
@@ -34,16 +49,57 @@ definitions:
         type: integer
     type: object
 info:
-  contact:
-    email: angeloperera@gmail.com
-    name: Angelo Perera
-    url: https://github.com/aceslick911/bcg-checkout
-  description: BCG API
-  license:
-    name: MIT
-    url: https://github.com/aceslick911/bcg-checkout/blob/master/LICENSE
-  version: "1.0"
+  contact: {}
 paths:
+  /api/tasks:
+    get:
+      description: Get Tasks
+      parameters:
+      - description: Taskname
+        in: query
+        name: taskname
+        type: string
+      - description: Firstname
+        in: query
+        name: firstname
+        type: string
+      - description: Lastname
+        in: query
+        name: lastname
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/tasks.Task'
+              type: array
+            type: array
+      security:
+      - Authorization Token: []
+      summary: Retrieves tasks based on query
+  /api/tasks/{id}:
+    get:
+      description: get Task by ID
+      parameters:
+      - description: Task ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/tasks.Task'
+      security:
+      - Authorization Token: []
+      summary: Retrieves task based on given ID
   /api/users:
     get:
       description: Get Users
@@ -93,9 +149,4 @@ paths:
       security:
       - Authorization Token: []
       summary: Retrieves user based on given ID
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
